# core_dual_shock

./: .gitignore  README.md  README_transmitter.md  pyproject.toml
src/core_dual_shock/: __init__.py  __main__.py  device.py  input_state.py  main.py  mapper.py  profile_loader.py  tkg_transmitter.py
src/core_dual_shock/profiles/: dualsense.yaml  dualshock4.yaml
tests/: __init__.py  test_input_state.py  test_mapper.py  test_profile_loader.py  test_tkg_transmitter.py
tools/: generate_profile.py  virtual_serial_receiver.py
